Fix issue with post content overflowing on small screens.

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -386,7 +386,7 @@ a.home {
 
 .tmpl-post .content {
   grid-column: 2 / auto;
-  width: 57ch;
+  max-width: 57ch;
   margin: 0 auto; }
 
 .tmpl-post footer {
