--- a/src/assets/styles/scss/partials/_post-tmpl.scss
+++ b/src/assets/styles/scss/partials/_post-tmpl.scss
@@ -6,7 +6,7 @@
   }
   .content {
     grid-column: 2 / auto;
-    width: 57ch;
+    max-width: 57ch;
     margin: 0 auto;
   }
   footer {
